* 2013-08-21 - thorben.betten@open-xchange.com

 - Fix for bug 28110: User proper SQL statement for updating the transport settings on password transcription
 - Fix for bug 28429: Also consider signaled content length (if available) when checking for a valid image
 - Fix for bug 27413: Enabled to consider X-Forward-Headers to keep the information if a secure connection has been established by client

* 2013-08-20 - martin.herfurth@open-xchange.com

 - Fix for bug 26350: Many calendar deletes in a multiple request lead to database deadlocks.

* 2013-08-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG
 - Fix for bug 27176: Don't query user service unless needed, don't evaluate global addressbook permissions repeatedly

* 2013-08-20 - thorben.betten@open-xchange.com

 - Fix for bug 28368: Ignore possibly contained <p> tag in image's binary data
 - Preparation to fix bug 28163: Don't perform any image transformation if not needed as signaled by URL parameters and/or image type
 - Fix for bug 27009: Removed auto-correct attempt for special folders on read-only access operations

* 2013-08-19 - thorben.betten@open-xchange.com

 - Fix for bug 24629: Preload folder names on root subfolder retrieval
 - Fix for bug 28381: Display appropriate warning in case folder owner's admin permission is auto-restored
 - Fix for bug 28397: Fixed possible ArrayIndexOutOfBoundsException while listing folders

* 2013-08-16 - jan.bauerdick@open-xchange.com

 - Fix for bug 28350: Check if another distribution list with same name already exists

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28317: Invalidate all other user sessions after password change

* 2013-08-15 - marcus.klein@open-xchange.com

 - Fix for bug 28283: Need to poll the system bundle to check if shutdown was successful and extended scripting for calling shutdown process
   to reduce error output.
